<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.addProduct.AddProductFragments"
    android:background="@color/black"
    android:paddingHorizontal="32dp">

    <TextView
        android:id="@+id/AddProductHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/headingBody"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/add_product"
        />
    <TextView
        android:id="@+id/productTypeTv"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddProductHeading"
        android:text="@string/product_type"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/spinnerCardView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/white"
        app:cardCornerRadius="10dp"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productTypeTv">
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/productTypeSv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:entries="@array/product_type"
            />

    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/productNameTv"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerCardView"
        android:text="Product Name"
        />
    <EditText
        android:id="@+id/productNameEt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Pen"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productNameTv"
        android:background="@drawable/edit_text_background"
        />
    <TextView
        android:id="@+id/priceTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productNameEt"
        android:text="@string/price"
        style="@style/textBody"
        />
    <EditText
        android:id="@+id/priceEt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/_0_0"
        android:maxLines="1"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceTv"
        android:background="@drawable/edit_text_background"
        />
    <TextView
        android:id="@+id/taxTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceEt"
        android:text="@string/tax"
        android:maxLines="1"
        style="@style/textBody"
        />
    <EditText
        android:id="@+id/taxEt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taxTv"
        android:background="@drawable/edit_text_background"
        android:hint="@string/_0_0"
        android:maxLines="1"
        android:inputType="numberDecimal"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadImageBt"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:cornerRadius="10dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taxEt"
        android:text="@string/upload_image"
        android:textAllCaps="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cornerRadius="10dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uploadImageBt"
        android:text="@string/submit"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>